[tool.poetry]
name = "remarks"
version = "0.3.10"
description = "Extract annotations (highlights and scribbles) from PDF, EPUB, and notebooks marked with reMarkable™ paper tablets. Export to Markdown, PDF, PNG, and SVG."
authors = ["Laura <https://github.com/azeirah>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/scrybbling-together/remarks"
keywords = ["remarkable-tablet", "remarkable", "markdown", "png", "pdf", "svg", "annotations", "highlights", "scribbles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Utilities"
]
include = ["remarks/assets/templates/*.template"]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^3.12"
PyMuPDF = "^1.23.5"
rmscene = { git = "https://github.com/avncharlie/rmscene-scrybbling.git", branch = "main" }
pyyaml = "^6.0.1"
parsita = "^2.1.1"
numpy = "^2.2.1"
flask = "^3.1.0"
rmc = { git = "https://github.com/avncharlie/rmc-scrybbling.git", branch = "main" }
sentry-sdk = { version="^2.25.0", extras=["flask"] }
gunicorn = "23.0.0"

[tool.poetry.extras]
server = ["flask"]

[tool.poetry.scripts]
remarks = 'remarks.__main__:main'
remarks-server = "remarks.server:main_prod"

[tool.poetry.dev-dependencies]
pytest = {version = "^7.2.0", extras = []}
tqdm = "^4.67.1"

[build-system]
# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
# https://github.com/python-poetry/poetry/releases/tag/1.3.0
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "markdown",
    "pdf",
    "visual",
    "unfinished_feature"
]
